gcc/testsuite/rust/rustc/ui/macros/macro-path-prelude-fail-2.rs
mod m {
    fn check() {
        Result::Ok!(); // { dg-error ".E0433." "" { target *-*-* } }
    }
}

fn main() {}

